# wftpd-windows

./: .gitignore  CODE_HEALTH_REPORT.md  CODE_LOGIC_CHECK_REPORT.md  CONTINUOUS_OPTIMIZATION_REPORT.md  Cargo.toml  FINAL_MEMORY_OPTIMIZATION.md  FTPS_STATUS_CHECK.md  FTPS_TEST_GUIDE.md  FTPS_TEST_SUMMARY.md  FTP_TLS_COMMANDS_STATUS.md  GUI_MEMORY_ANALYSIS.md  GUI_SERVICE_CONTROL_REFACTOR.md  IPC_OPTIMIZATION.md  LOGIC_ERRORS_FIX_SUMMARY.md  LOG_DUPLICATE_FIX.md  LOG_EVENT_DRIVER_FIX.md  LOG_FILE_FIX.md  LOG_MEMORY_OPTIMIZATION.md  LOG_OPTIMIZATION.md  MEMORY_OPTIMIZATION_REPORT.md  NOTIFY_EVENT_DRIVEN_ANALYSIS.md  NOTIFY_IMPLEMENTATION_REPORT.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_TEST.md  SERVICE_TAB_OPTIMIZATION.md  SFTP_FORWARD_CLEANUP.md  TEST_GUIDE.md  build.rs  clippy-output.txt  clippy_output.txt  icon.rc  release-check-output.txt  release-check.cmd  run_test.bat  run_test.ps1  test_config.example.json  (+17 more)
.github/workflows/: ci.yml
.trae/rules/: base.md
src/: gui_main.rs  lib.rs  service_main.rs
src/core/: cert_gen.rs  config.rs  file_logger.rs  ftp_server.rs  ipc.rs  logger.rs  mod.rs  path_utils.rs  rate_limiter.rs  server_manager.rs  sftp_server.rs  users.rs  windows_ipc.rs
src/core/ftp_server/: commands.rs  ftps_listener.rs  mod.rs  passive.rs  session.rs  tls.rs  transfer.rs
src/gui_egui/: about_tab.rs  file_log_tab.rs  log_tab.rs  mod.rs  security_tab.rs  server_tab.rs  service_tab.rs  styles.rs  user_tab.rs
wftpd/: BACKEND_CLEANUP.md  COMPILATION_FIX.md  Cargo.toml  build.rs  build_errors.txt  wftpg.manifest
wftpd-test-go/: CODE_VERIFICATION.md  PROJECT_INFO.md  PROJECT_SUMMARY.md  README.md  README_USAGE.md  SFTP_CONNECTION_FIX.md  SFTP_FIX_REPORT.md  USAGE.md  config.json  ftp_helpers.go  ftp_tests.go  go.mod  main.go  run_tests.bat  run_tests.ps1  sftp.go  sftp_debug_output.txt  sftp_test.go  sftp_test_output.txt
wftpd-test-python/: .gitignore  CHECKLIST.md  FTP_OPTIMIZATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  run_tests.bat  run_tests.ps1  test_config.json  test_environment.py  wftpd_test.py
wftpd-test-python/testdata/: .gitkeep
wftpd/src/: lib.rs  service_main.rs
wftpd/src/core/: cert_gen.rs  config.rs  fail2ban.rs  ipc.rs  logger.rs  metrics.rs  mod.rs  path_utils.rs  quota.rs  rate_limiter.rs  server_manager.rs  sftp_server.rs  upnp_manager.rs  users.rs  windows_ipc.rs
wftpd/src/core/ftp_server/: cert_gen.rs  commands.rs  ftps_listener.rs  mod.rs  passive.rs  pooled.rs  reply.rs  session.rs  session_auth.rs  session_cmds.rs  session_dirs.rs  session_ip.rs  session_main.rs  session_site.rs  session_state.rs  session_xfer.rs  tls.rs  transfer.rs  upnp_manager.rs
wftpd/src/core/sftp_server/: attr_ops.rs  cmd_dispatch.rs  dir_ops.rs  extended.rs  file_ops.rs  handler.rs  link_ops.rs  lock_ops.rs  mod.rs
wftpg/: BACKEND_CODE_CHECK.md  COMPATIBILITY_CLEANUP.md  CONFIG_AUTO_RELOAD_USAGE.md  CONFIG_MANAGER_MIGRATION.md  Cargo.toml  FINAL_SUMMARY_BUTTON_FIXES.md  FIX_SUMMARY_BUTTONS_AND_AUTO_RELOAD.md  FIX_SUMMARY_P0_P1.md  FIX_SUMMARY_P2_P3.md  IPC_SERVICE_CONTROL_ANALYSIS.md  LOG_AUTO_REFRESH_FIX.md  MEMORY_ANALYSIS_REPORT.md  MEMORY_CONCLUSION_20MB.md  MEMORY_OPTIMIZATION.md  MEMORY_TRUTH_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  REFACTORING_CHANGES.md  REFACTORING_SUMMARY.md  WINDOW_TOPMOST_IMPLEMENTATION.md  analyze_memory.ps1  build.rs  test_button_fixes.ps1  test_log_refresh.ps1  test_memory.ps1  test_memory.sh  test_window_topmost.ps1  wftpg.manifest
wftpg-egui-win64/: LICENSE  icon.rc
wftpg-egui-win64/src/: gui_main.rs  lib.rs  service_main.rs
wftpg-egui-win64/src/core/: config.rs  mod.rs  sftp_server.rs
wftpg-egui-win64/src/core/ftp_server/: mod.rs  transfer.rs
wftpg-egui-win64/src/gui_egui/: about_tab.rs  server_tab.rs
wftpg/i18n/en/: logs.json  ui.json
wftpg/i18n/zh/: logs.json  ui.json
wftpg/src/: gui_main.rs  lib.rs
wftpg/src/core/: config.rs  config_manager.rs  config_watcher.rs  error.rs  i18n.rs  ipc.rs  logger.rs  mod.rs  path_utils.rs  server_manager.rs  users.rs  windows_ipc.rs
wftpg/src/gui_egui/: about_tab.rs  file_log_tab.rs  log_tab.rs  mod.rs  security_tab.rs  server_tab.rs  service_tab.rs  styles.rs  user_tab.rs
win-src/: gui_main.rs  service_main.rs
win-src/core/: config.rs  logger.rs  quota.rs  sftp_server.rs  users.rs
win-src/core/ftp_server/: commands.rs  mod.rs  passive.rs
win-src/gui_egui/: mod.rs  security_tab.rs  service_tab.rs  user_tab.rs
