[package]
name = "wftpd"
version = "3.3.25"
edition = "2024"
authors = ["boss@oi-io.cc"]
description = "SFTP+FTP Server Daemon for Windows"
build = "build.rs"

[dependencies]
# ========== 异步运行时 ==========
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "fs", "signal"] }
async-trait = "0.1"
parking_lot = "0.12.5"

# ========== 序列化与配置 ==========
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# ========== 错误处理 ==========
anyhow = "1"
thiserror = "2"

# ========== 日志与追踪 ==========
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "time", "chrono"] }
tracing-appender = "0.2.4"

# ========== 安全与加密 ==========
argon2 = "0.6.0-rc.8"
getrandom = "0.4.2"
sha2 = "0.11"
md-5 = "0.10"
hex = "0.4"
rsa = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rustls = "0.23.37"
tokio-rustls = "0.26.4"
pem = "3.0.6"
rcgen = "0.14.7"

# ========== SSH/SFTP ==========
russh = "0.60.0"
bytes = "1"

# ========== FTP/FTPS ==========
ipnet = "2"
socket2 = "0.6"

# ========== 文件系统 ==========
fs2 = "0.4"
notify = "8.2.0"

# ========== Windows API ==========
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-service = "0.8.0"
ctrlc = "3.5.2"

# ========== UPnP/端口映射 ==========
igd-next = "0.16.1"

# ========== 监控指标 ==========
prometheus = "0.13"
lazy_static = "1.5"
scopeguard = "1.2.0"

[build-dependencies]
embed-resource = "3.0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[[bin]]
name = "wftpd"
path = "src/service_main.rs"

[lib]
name = "wftpd"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.27.0"
